// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings Should render heading 1 with custom styles 1`] = `
"%cHeading 1
 font-family:Times New Roman;font-size:32px;font-weight:bold;color:red;margin:12px 0px;"
`;

exports[`Headings Should render heading 1 with default styles 1`] = `
"%cHeading 1
 font-family:Times New Roman;font-size:32px;font-weight:bold;color:black;margin:12px 0px;"
`;

exports[`Headings Should render heading 2 with custom styles 1`] = `
"%cHeading 2
 font-family:Times New Roman;font-size:24px;font-weight:bold;color:red;margin:12px 0px;"
`;

exports[`Headings Should render heading 2 with default styles 1`] = `
"%cHeading 2
 font-family:Times New Roman;font-size:24px;font-weight:bold;color:black;margin:12px 0px;"
`;

exports[`Headings Should render heading 3 with custom styles 1`] = `
"%cHeading 3
 font-family:Times New Roman;font-size:19px;font-weight:bold;color:red;margin:12px 0px;"
`;

exports[`Headings Should render heading 3 with default styles 1`] = `
"%cHeading 3
 font-family:Times New Roman;font-size:19px;font-weight:bold;color:black;margin:12px 0px;"
`;

exports[`Headings Should render heading 4 with custom styles 1`] = `
"%cHeading 4
 font-family:Times New Roman;font-size:16px;font-weight:bold;color:red;margin:12px 0px;"
`;

exports[`Headings Should render heading 4 with default styles 1`] = `
"%cHeading 4
 font-family:Times New Roman;font-size:16px;font-weight:bold;color:black;margin:12px 0px;"
`;

exports[`Headings Should render heading 5 with custom styles 1`] = `
"%cHeading 5
 font-family:Times New Roman;font-size:13px;font-weight:bold;color:red;margin:12px 0px;"
`;

exports[`Headings Should render heading 5 with default styles 1`] = `
"%cHeading 5
 font-family:Times New Roman;font-size:13px;font-weight:bold;color:black;margin:12px 0px;"
`;
